# opengl-playground

./: CMakeLists.txt  main.cpp
cmake/: shader.cmake
lib/aml/src/: Util.hpp  Window.hpp  WindowManager.cpp  WindowManager.hpp
lib/aml/src/exception/: WindowException.hpp
lib/aml/src/window/: WindowImplSDL.cpp  WindowImplSDL.hpp
lib/glcpp/src/: Misc.hpp  Program.cpp  Program.hpp
lib/glcpp/src/exception/: CompileException.hpp  LinkException.hpp
lib/glcpp/src/shader/: Shader.hpp
shader/: none.vert  single_color.frag  text_shader.frag  text_shader.vert
